--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>Peta Wilayah Pulau Sumba</title>
+  <title>Peta Kabupaten di Pulau Sumba</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <!-- Leaflet CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+
   <style>
-    body, html { margin: 0; padding: 0; height: 100%; }
-    #map { height: 100%; }
+    #map {
+      height: 100vh;
+      width: 100%;
+    }
   </style>
 </head>
 <body>
@@ -16,46 +20,39 @@
 <div id="map"></div>
 
 <!-- Leaflet JS -->
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
 <script>
   // Inisialisasi peta
-  var map = L.map('map').setView([-9.6, 119.6], 8); // Fokus ke Sumba
+  var map = L.map('map').setView([-9.7, 119.5], 8); // Koordinat tengah Pulau Sumba
 
-  // Tambahkan tile layer dari OpenStreetMap
+  // Tambahkan basemap dari OpenStreetMap
   L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-    attribution: '&copy; OpenStreetMap contributors'
+    maxZoom: 18,
+    attribution: '© OpenStreetMap'
   }).addTo(map);
 
-  // Fungsi untuk menentukan warna per kabupaten
-  function getColor(nama) {
-    switch (nama) {
-      case 'Sumba Timur': return '#FF9999';
-      case 'Sumba Tengah': return '#FFD700';
-      case 'Sumba Barat': return '#87CEFA';
-      case 'Sumba Barat Daya': return '#90EE90';
-      default: return '#CCCCCC';
-    }
-  }
-
-  // Load file GeoJSON gabungan
-  fetch('sumba.json') // Pastikan path file benar
+  // Load file GeoJSON kabupaten di Pulau Sumba
+  fetch('sumba_kabupaten.geojson')
     .then(response => response.json())
     .then(data => {
       L.geoJSON(data, {
-        style: feature => ({
-          color: '#555',
-          weight: 2,
-          fillColor: getColor(feature.properties.nama_kabupaten),
-          fillOpacity: 0.6
-        }),
-        onEachFeature: (feature, layer) => {
-          const nama = feature.properties.nama_kabupaten || 'Tidak Diketahui';
-          layer.bindPopup(`<b>${nama}</b>`);
+        style: function (feature) {
+          return {
+            color: "#0077be",
+            weight: 2,
+            fillOpacity: 0.3
+          };
+        },
+        onEachFeature: function (feature, layer) {
+          let namaKabupaten = feature.properties.WADMKK || feature.properties.NAMOBJ || "Tidak diketahui";
+          layer.bindPopup(`<strong>${namaKabupaten}</strong>`);
         }
       }).addTo(map);
     })
-    .catch(err => console.error("Gagal memuat GeoJSON:", err));
+    .catch(error => {
+      console.error("Gagal load GeoJSON:", error);
+    });
 </script>
 
 </body>
